--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        
     <!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
@@ -26,11 +30,11 @@
                 <!--Titulo del Restaurante-->
                 <h1>Ficcaza</h1>
             </div>
-            <div class="subt">
+            <div class="subt container-fluid ">
                 <!-- Subtitulo  -->
                 <h2>Explorando Sabores...</h2>
-
             </div>
+            <div class="menu container-fluid">
             <div class="menu1">
                 <a href="index.html">Inicio</a>
             </div>
@@ -44,6 +48,10 @@
             <div class="menu4">
                 <a href="secciones/Contacto.html">Contacto</a>
             </div>
+            <div class="menu5">
+                <a href="secciones/Carta.html">Carta</a>
+                </div>
+            </div>
 
 
         </div>
@@ -52,10 +60,10 @@
         <div class="tituloMain">
             <h2> Nuestros mas valorados</h2>
         </div>
-        <div class="cajaMain">
+        <div class="cajaMain ">
             <div class="recomendacion">
-                <div class="imagen">
-                    <img src="imagenes/plato1.jpg" alt="">
+                <div class="imagen ">
+                    <img src="imagenes/plato1.jpg" class="img-thumbnail" alt="...">
                 </div>
                 <div class="valoracion">
                     <h3>Excelente</h3>
@@ -63,7 +71,7 @@
             </div>
             <div class="recomendacion">
                 <div class="imagen">
-                    <img src="imagenes/plato2.jpg" alt="">
+                    <img src="imagenes/plato2.jpg" class="img-thumbnail" alt="...">
                 </div>
                 <div class="valoracion">
                     <h3>Muy Bueno</h3>
@@ -72,7 +80,7 @@
 
             <div class="recomendacion">
                 <div class="imagen">
-                    <img src="imagenes/plato3.png" alt="">
+                    <img src="imagenes/plato3.png" class="img-thumbnail" alt="...">
                 </div>
                 <div class="valoracion">
                     <h3>Bueno</h3>
