--- a/secciones/locales.html
+++ b/secciones/locales.html
@@ -28,7 +28,8 @@
             <h2>Explorando Sabores...</h2>
         
         </div>
-        <div class="menu1">
+        <div class="menu container-fluid" >
+         <div class="menu1">
             <a href="../index.html">Inicio</a>
         </div>
         <div class="menu2">
@@ -40,6 +41,11 @@
 
         <div class="menu4">
             <a href="Contacto.html">Contacto</a>
+        </div>
+    
+        <div class="menu5">
+            <a href="Carta.html">Carta</a>
+            </div>
         </div>
         </div>
         </header>
