--- a/secciones/Carta.html
+++ b/secciones/Carta.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carta</title>
-    <link rel="stylesheet" href="../estilos/estilo.css">
+    <!-- Link bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
@@ -29,8 +31,36 @@
             <h2>Explorando Sabores...</h2>
         
         </div>
-        <div class="menu container-fluid" >
-            <div class="menu1">
+        <div class=" container-fluid nav1" >
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+             <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                       <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                       </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="locales.html">Locales</a>
+                       </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Reserva.html">Reservas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                           <a class="nav-link" href="Carta.html">Carta</a>
+                       </li>
+                    </ul>
+              </div>
+            </div>
+          </nav>
+        </div> 
+        
+            <!-- <div class="menu1">
                <a href="../index.html">Inicio</a>
            </div>
            <div class="menu2">
@@ -48,8 +78,79 @@
                <a href="Carta.html">Carta</a>
                </div>
            </div>
-        </div>
-        </header>
-        <p>probando cambio de usuario</p>
+        -->
+
+    </header>
+      <!-- inicio del main-->
+       <main>
+        <div class="container tablaUno">
+            <div class="row elementoTabla">
+                <h3>Carnes</h3>
+            </div>
+            <div class="row row-cols-3">
+              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+            </div>
+            <div class="row  filaVacia"></div>
+          </div>
+
+          <div class="container tablaDos">
+            <div class="row elementoTabla">
+                <h3>Pastas</h3>
+            </div>
+            <div class="row row-cols-3">
+              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+            </div>
+            <div class="row  filaVacia"></div>
+          </div>
+
+          <div class="container tablaTres">
+            <div class="row elementoTabla">
+                <h3>Ensaladas</h3>
+            </div>
+            <div class="row row-cols-3">
+              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
+              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
+              <div class="col-12 col-md-4 elementoTabla">$X</div>
+            </div>
+            <div class="row  filaVacia"></div>
+            </div>
+          </div>
+        </main>
+    <!-- fin del main -->
+<!--inicio del footer-->
+<footer>
+    <!-- Redes Sociales -->
+    <h4>Nuestras redes sociales</h4>
+    <div class="red1"><a href="#"></a>Facebook</div>
+    <div class="red2"><a href="#"></a>Twitter</div>
+    <div class="red3"><a href="#"></a>Instagram</div>
+</footer>
+<!--fin del footer-->
+<!--     scripts de bootstrap -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
