--- a/secciones/Carta.html
+++ b/secciones/Carta.html
@@ -11,8 +11,9 @@
     <!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <!-- Etiquetas de linkeo a Css propio -->
-    <link rel="stylesheet"  href="../estilos/estilo.css">
+<!--  Etiquetas de linkeo a Css propio 
+    <link rel="stylesheet"  href="../estilos/estilo.css"> -->
+    <link rel="stylesheet" href="../CSS/pruebacss.css">
 
 </head>
 <body>
@@ -83,58 +84,84 @@
     </header>
       <!-- inicio del main-->
        <main>
-        <div class="container tablaUno">
-            <div class="row elementoTabla">
+           <div class="contenedor-main">
+        <div class=" container-fluid nav2" >
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                       <span class="navbar-toggler-icon"></span>
+                     </button>
+                   <div class="collapse navbar-collapse" id="navbarNav">
+                       <ul class="navbar-nav">
+                          <li class="nav-item">
+                               <a class="nav-link active" aria-current="page" href="#">Secciones del menu</a>
+                          </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#Carnes">Carnes</a>
+                          </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#Pastas">Pastas</a>
+                           </li>
+                           <li class="nav-item">
+                               <a class="nav-link" href="#Ensaladas">Ensaladas</a>
+                           </li>
+                       </ul>
+                 </div>
+               </div>
+             </nav>
+           </div> 
+        <div id="Carnes" class="container tabla-carnes">
+            <div class="row tabla-general-titulo">
                 <h3>Carnes</h3>
             </div>
             <div class="row row-cols-3">
-              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato1</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion1</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato2</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion2</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato3</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion3</p></div>
+              <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
             </div>
-            <div class="row  filaVacia"></div>
+            <div class="row  tabla-general-vacio"></div>
           </div>
 
-          <div class="container tablaDos">
-            <div class="row elementoTabla">
+          <div id="Pastas" class="container tabla-pastas">
+            <div class="row tabla-general-titulo">
                 <h3>Pastas</h3>
             </div>
             <div class="row row-cols-3">
-              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato1</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion1</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato2</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion2</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato3</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion3</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
             </div>
-            <div class="row  filaVacia"></div>
+            <div class="row  tabla-general-vacio"></div>
           </div>
 
-          <div class="container tablaTres">
-            <div class="row elementoTabla">
+          <div id="Ensaladas" class="container tabla-ensaladas">
+            <div class="row tabla-general-titulo">
                 <h3>Ensaladas</h3>
             </div>
             <div class="row row-cols-3">
-              <div class="col-12 col-md-4 elementoTabla">Plato1</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion1</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato2</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion2</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
-              <div class="col-12 col-md-4 elementoTabla">Plato3</div>
-              <div class="col-12 col-md-4 elementoTabla">Descripcion3</div>
-              <div class="col-12 col-md-4 elementoTabla">$X</div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato1</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion1</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato2</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion2</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Plato3</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>Descripcion3</p></div>
+                <div class="col-12 col-md-4 tabla-general-elemento"><p>$X</p></div>
             </div>
-            <div class="row  filaVacia"></div>
+            <div class="row  tabla-general-vacio"></div>
             </div>
           </div>
         </main>
