se elimino el archivo de pruebaCss y se volvio a linkear todas las paginas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Este es el sitio web de nuestro restaurante donde podes conocernos hacer reservas contactarnos y ver nuestra carta">
+    <meta name="keywords" content="restaurante comida reservas">
     <!-- Link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,8 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
     <!-- Etiquetas de linkeo a Css propio -->
-    <!--     <link rel="stylesheet" href="estilos/estilo.css"> -->
-    <link rel="stylesheet" href="CSS/pruebacss.css">
+    <link rel="stylesheet" href="estilos/estilo.css">
     <!-- titulo -->
     <title>Restaurante Ficcaza</title>
 </head>
@@ -112,7 +113,7 @@
                 </div>
             </div>
 
-            <!--Inicio del aside-->
+            <!--Inicio bloque publicidad-->
 
             <div class="col-sm-4 publicidad">
                 <div class="publicidad-imagen">
@@ -122,13 +123,6 @@
             </div>
 
         </div>
-
-        <!-- fin del aside-->
-
-
-
-        </div>
-
     </main>
     <!--fin del main-->
     <!-- inicio de la seccion historia-->
