--- a/secciones/Carta.html
+++ b/secciones/Carta.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--     etiquetas meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Link bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <meta name="description" content="En esta seccion podes ver los productos que ofrecemos">
+    <meta name="keywords" content="restaurante comida carta">
+<!-- Link bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <!-- Link de la tipografia -->
+<!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <!-- Etiquetas de linkeo a Css propio -->
-    <!--     <link rel="stylesheet" href="estilos/estilo.css"> -->
-    <link rel="stylesheet" href="../CSS/pruebacss.css">
+<!-- Etiquetas de linkeo a Css propio -->
+    <link rel="stylesheet" href="../estilos/estilo.css">
     <!-- titulo -->
     <title>Carta</title>
 
