--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!--     etiquetas meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta seccion podes hacer reservas en nuestros locales">
+    <meta name="keywords" content="restaurante comida reservas">
         <!-- Link bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,8 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
     <!-- Etiquetas de linkeo a Css propio -->
-    <!--     <link rel="stylesheet" href="estilos/estilo.css"> -->
-    <link rel="stylesheet" href="../CSS/pruebacss.css">
+    <link rel="stylesheet" href="../estilos/estilo.css">
     <!-- titulo -->
     <title>Reserva</title>
 </head>
@@ -164,12 +166,8 @@
 
 </main>
 
-
-
-
-
-</form>
 <!--fin del main-->
+
 <!--inicio del footer-->
 <footer>
     <!-- Redes Sociales -->
