se agrego un parcial para las mediaqueries

--- a/secciones/locales.html
+++ b/secciones/locales.html
@@ -72,7 +72,7 @@
     <div class="row sucursales">
         <div class="col-sm-4 sucursales-primera">
             <div class="sucursales-primera-titulo">
-                <h3>sucursal1</h3>
+                <h3>Primer sucursal</h3>
             </div>
             
             <div class="col-sm-12 sucursales-primera-img">
@@ -81,7 +81,7 @@
         </div>
         <div class="col-sm-4 sucursales-segunda">
             <div class="sucursales-segunda-titulo">
-                <h3>sucursal2</h3>
+                <h3>Segunda sucursal</h3>
             </div>
             <div class="col-sm-12 sucursales-segunda-img">
                 <img src="../imagenes/sucursal2.jpg" alt="">
