correccion de clase publicidad porque era bloqueada por abp o similares

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 
             <!--Inicio bloque publicidad-->
 
-            <div class="col-sm-4 publicidad">
-                <div class="publicidad-imagen">
-                    <img src="imagenes/publicidad.png" alt="">
+            <div class="col-sm-4 promo">
+                <div class="promo-imagen">
+                    <img src="imagenes/promo.png" alt="">
                 </div>
                 <a href="#">click aqui para ganar millones</a>
             </div>
