--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -7,24 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En esta seccion podes dejarnos comentarios">
     <meta name="keywords" content="restaurante comida comentarios">
-        <!-- Link bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+
+<!-- link favicon -->
+    <link rel="shortcut icon" href="../imagenes/logo.jpg" type="image/x-icon">
+
+<!-- Link bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <!-- Link de la tipografia -->
+<!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <!-- Etiquetas de linkeo a Css propio -->
+<!-- Etiquetas de linkeo a Css propio -->
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <!-- titulo -->
+<!-- titulo -->
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <!--     encabezado -->
+<!--encabezado -->
         <div class="row">
             <div class="col-2 logo">
                 <img src="../imagenes/logo.jpg" alt="">
@@ -38,7 +42,7 @@
                 <h2>Explorando Sabores...</h2>
             </div>
         </div>
-        <!--         menu -->
+<!--menu -->
         <div class="container">
             <div class="row menu">
                 <div class="col-sm-2 menu-item">
@@ -59,15 +63,14 @@
             </div>
         </div>
     </header>
-   
 <!-- inicio del main -->
 <main>
     <!-- Titulo de la seccion -->
-    <div class="container-fluid contacto-tiulo">
+    <div class="container-fluid contacto-titulo">
         <h2>Seccion de contacto</h2>
     </div>
-<!--     bloque de formulario -->
-    <div class="container-fluid contacto-contenedor">
+<!--bloque de formulario -->
+    <div class="container-fluid col-sm-8 contacto-contenedor">
         <form>
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre</label>
@@ -87,7 +90,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Captcha</label>
             </div>
-            <button type="Enviar" class="btn btn-primary">Enviar</button>
+            <button type="Enviar" class="btn boton">Enviar</button>
           </form>
 
     </div>
