--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -7,19 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En esta seccion podes hacer reservas en nuestros locales">
     <meta name="keywords" content="restaurante comida reservas">
-        <!-- Link bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+<!-- link favicon -->
+    <link rel="shortcut icon" href="../imagenes/logo.jpg" type="image/x-icon">
+<!-- Link bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <!-- Link de la tipografia -->
+<!-- Link de la tipografia -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <!-- Etiquetas de linkeo a Css propio -->
+<!-- Etiquetas de linkeo a Css propio -->
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <!-- titulo -->
+<!-- titulo -->
     <title>Reserva</title>
 </head>
 <body>
@@ -66,7 +68,7 @@
     <div class="container-fluid reserva-titulo">
         <h2>Seccion de reservas</h2>
     </div>
-    <div class="container-fluid formulario-reserva-contenedor">
+    <div class="container-fluid col-sm-8 reserva-formulario-contenedor">
         <form>
             <div class="mb-3">
                 <label for="Nombre" class="form-label">Nombre</label>
@@ -159,7 +161,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Captcha</label>
             </div>
-            <button type="submit" class="btn btn-primary boton-enviar">Enviar</button>
+            <button type="submit" class="btn boton">Enviar</button>
           </form>
     </div>
 
