--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Este es el sitio web de nuestro restaurante donde podes conocernos hacer reservas contactarnos y ver nuestra carta">
     <meta name="keywords" content="restaurante comida reservas">
-    <!-- link favicon -->
+    <meta name="author" content="Franco Vial">
+    <meta name="copyright" content="Ficcaza">
+    <!-- Link favicon -->
     <link rel="shortcut icon" href="./imagenes/logo.jpg" type="image/x-icon">
+
+    <!-- Open Graph -->
+    <meta property="og: tittle" content="Ficcaza">
+    <meta property="og: description" content="Este es el sitio web de nuestro restaurante donde podes conocernos">
+    <meta property="og: image" content="./imagenes/logo.jpg">
+    <meta property="og: url" content="https://https://ficcaza.000webhostapp.com/">
+    <meta property="og: locale" content="es_ES">
     <!-- Link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
