resubida de archivos por correccion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="./imagenes/logo.jpg" type="image/x-icon">
 
     <!-- Open Graph -->
-    <meta property="og: tittle" content="Ficcaza">
+    <meta property="og: tittle" contengitt="Ficcaza">
     <meta property="og: description" content="Este es el sitio web de nuestro restaurante donde podes conocernos">
     <meta property="og: image" content="./imagenes/logo.jpg">
     <meta property="og: url" content="https://https://ficcaza.000webhostapp.com/">
