--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -71,21 +71,21 @@
     <div class="container-fluid col-sm-8 reserva-formulario-contenedor">
         <form>
             <div class="mb-3">
-                <label for="Nombre" class="form-label">Nombre</label>
-                <input type="Nombre" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="reserva-nombre" class="form-label">Nombre</label>
+                <input type="Nombre" class="form-control" id="reserva-nombre" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">A nombre de quien va a estar hecha la reserva</div>
               </div>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <label for="reserva-email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="reserva-email" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie mas</div>
             </div>
-            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+            <select id="reserva-sucursal" class="form-select form-select-sm" aria-label=".form-select-sm example">
                 <option selected>Elegi la sucursal en la cual deseas reservar</option>
-                <option value="1">Sucursal1</option>
-                <option value="2">sucursal2</option>
+                <option value="1">Primera Sucursal</option>
+                <option value="2">Segunda Sucursal</option>
               </select>
-              <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+              <select id="reserva-cantidad" class="form-select form-select-sm" aria-label=".form-select-sm example">
                 <option selected>Indicanos la cantidad de personas</option>
                 <option value="1">Una</option>
                 <option value="2">Dos</option>
@@ -97,7 +97,7 @@
             <div class="container-fluid col-12">
                 <div class="row fecha">
                     <div class="col-sm-4 fecha-dia">
-                      <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                      <select id="reserva-dia" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                           <option selected>Dia</option>
                           <option value="01">01</option>
                           <option value="02">02</option>
@@ -132,7 +132,7 @@
                         </select>
                     </div>
                     <div class="col-sm-4 fecha-mes">
-                        <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <select id="reserva-mes" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                             <option selected>Mes</option>
                             <option value="enero">Enero</option>
                             <option value="febrero">Febrero</option>
@@ -161,7 +161,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Captcha</label>
             </div>
-            <button type="submit" class="btn boton">Enviar</button>
+            <button type="submit" onclick="pedirDatos()" class="btn boton">Enviar</button>
           </form>
     </div>
 
@@ -179,6 +179,9 @@
     <div class="red3"><a href="#"></a>Instagram</div>
 </footer>
 <!--fin del footer-->
+
+<!--     scripts de javascript -->
+    <script src="../js/app.js"></script>
     <!--     scripts de bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
