--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -77,7 +77,7 @@
               </div>
             <div class="mb-3">
               <label for="reserva-email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="reserva-email" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="reserva-email" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie mas</div>
             </div>
             <select id="reserva-sucursal" class="form-select form-select-sm" aria-label=".form-select-sm example">
@@ -94,69 +94,16 @@
                 <option value="5">Cinco</option>
 
               </select>
-            <div class="container-fluid col-12">
-                <div class="row fecha">
-                    <div class="col-sm-4 fecha-dia">
-                      <select id="reserva-dia" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                          <option selected>Dia</option>
-                          <option value="01">01</option>
-                          <option value="02">02</option>
-                          <option value="03">03</option>
-                          <option value="04">04</option>
-                          <option value="05">05</option>
-                          <option value="06">06</option>
-                          <option value="07">07</option>
-                          <option value="08">08</option>
-                          <option value="09">09</option>
-                          <option value="10">10</option>
-                          <option value="11">11</option>
-                          <option value="12">12</option>
-                          <option value="13">13</option>
-                          <option value="14">14</option>
-                          <option value="15">15</option>
-                          <option value="16">16</option>
-                          <option value="17">17</option>
-                          <option value="18">18</option>
-                          <option value="19">19</option>
-                          <option value="20">20</option>
-                          <option value="21">21</option>
-                          <option value="22">22</option>
-                          <option value="23">23</option>
-                          <option value="24">24</option>
-                          <option value="25">25</option>
-                          <option value="26">26</option>
-                          <option value="27">27</option>
-                          <option value="28">28</option>
-                          <option value="29">29</option>
-                          <option value="30">30</option>
-                        </select>
-                    </div>
-                    <div class="col-sm-4 fecha-mes">
-                        <select id="reserva-mes" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option selected>Mes</option>
-                            <option value="enero">Enero</option>
-                            <option value="febrero">Febrero</option>
-                            <option value="marzo">Marzo</option>
-                            <option value="abril">Abril</option>
-                            <option value="mayo">Mayo</option>
-                            <option value="junio">Junio</option>
-                            <option value="julio">Julio</option>
-                            <option value="agosto">Agosto</option>
-                            <option value="septiembre">septiembre</option>
-                            <option value="octubre">Octubre</option>
-                            <option value="noviembre">Noviembre</option>
-                            <option value="diciembre">Diciembre</option>
-                          </select>
-                    </div>
-                    <div class="col-sm-4 fecha-anio">
-                        <select class="form-select" aria-label="Disabled select example" disabled>
-                            <option selected>2021</option>
-                            <option value="2021">2021</option>
-                          </select>
-                    </div>
-                 
-                </div>
-            </div>
+              <select id="reserva-dia" class="form-select form-select-sm mb-3" aria-label=".form-select-lg example">
+                <option selected>Dia</option>
+                <option value="Lunes">Lunes</option>
+                <option value="Martes">Martes</option>
+                <option value="Miercoles">Miercoles</option>
+                <option value="Jueves">Jueves</option>
+                <option value="Viernes">Viernes</option>
+                <option value="Sabado">Sabado</option>
+                <option value="Domingo">Domingo</option>
+              </select>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Captcha</label>
@@ -164,6 +111,7 @@
             <button type="submit" onclick="pedirDatos()" class="btn boton">Enviar</button>
           </form>
     </div>
+    <div id="reservas-hechas"></div>
 
 
 </main>
