se arreglo el error de la seccion contactos

--- a/secciones/Contacto.html
+++ b/secciones/Contacto.html
@@ -91,7 +91,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Captcha</label>
             </div>
-            <button id="contacto-boton-enviar" type="submit" class="btn boton">Enviar</button>
+            <button id="contacto-boton-enviar" type="button" class="btn boton">Enviar</button>
           </form>
 
     </div>
