peticiones ajax a un archivo json

--- a/secciones/Reserva.html
+++ b/secciones/Reserva.html
@@ -98,19 +98,23 @@
                 </select>
                 <select id="reserva-dia" class="form-select form-select-sm mb-3" aria-label=".form-select-lg example">
                     <option selected>Dia</option>
-                    <option value="Lunes">Lunes</option>
-                    <option value="Martes">Martes</option>
-                    <option value="Miercoles">Miercoles</option>
-                    <option value="Jueves">Jueves</option>
-                    <option value="Viernes">Viernes</option>
-                    <option value="Sabado">Sabado</option>
-                    <option value="Domingo">Domingo</option>
+                    <option value="0">Lunes</option>
+                    <option value="1">Martes</option>
+                    <option value="2">Miercoles</option>
+                    <option value="3">Jueves</option>
+                    <option value="4">Viernes</option>
+                    <option value="5">Sabado</option>
+                    <option value="6">Domingo</option>
                 </select>
+                <div id="reserva-consulta">
+                    <button id="reserva-consulta-boton">Consultar dias disponibles</button>
+
+                </div>
                 <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Captcha</label>
                 </div>
-                <button type="submit" class="btn boton">Enviar</button>
+                <button id="boton-enviar" type="button" class="btn boton">Enviar</button>
             </form>
         </div>
         <div id="reservas-hechas"></div>
@@ -132,16 +136,18 @@
 
     <!--     scripts de bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!--     scripts de javascript -->
-    <script src="../js/app.js"></script>
+    <script src="../js/reserva.js"></script>
 </body>
 
 </html>
